[project]
name = "uv-git-debug-b"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "uv-git-debug-a",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"uv_git_debug_b" = [
    "py.typed",
]

[tool.uv.sources]
uv-git-debug-a = { git = "https://github.com/kubotty/uv-git-debug-a.git", tag = "0.1.0" }
